# cyberimmune-systems-example-traffic-light-kos

./: CMakeLists.txt  USAGE.md
communication/: CMakeLists.txt
communication/src/: general.h  main.cpp  mqtt-comm.cpp  mqtt-comm.h
control_system/: CMakeLists.txt
control_system/src/: control_system.c
diagnostics/: CMakeLists.txt
diagnostics/src/: diagnostics.c
einit/: CMakeLists.txt
einit/src/: init.yaml.in  security.psl
lights_gpio/: CMakeLists.txt
lights_gpio/src/: lights_gpio.c
logger/: CMakeLists.txt
logger/src/: logger.c
resources/: CCSMode.cdl  CCSTimes.cdl  CDiag2Comm.cdl  CDiagComm.cdl  CDmessage.cdl  Communication.edl  ControlSystem.edl  Diagnostics.edl  ICSMode.idl  ICSTimes.idl  IDiag2Comm.idl  IDiagComm.idl  Logger.edl  Write.idl
resources/include/: secure_logger_common.h  secure_logger_common_secure.h
sim/: CDmessage.cdl.nk.d  CMakeCache.txt  CMode.cdl.h  CMode.cdl.nk.d  Communication.edl.nk.d  ControlSystem.edl.h  ControlSystem.edl.nk.d  Diagnostics.edl.h  Diagnostics.edl.nk.d  IDiagnostics.idl.nk.d  IMode.idl.h  IMode.idl.nk.d  LightsGPIO.edl.nk.d  Makefile  cmake_install.cmake  compile_commands.json
sim/_headers_/traffic_light/: CDmessage.cdl.h  Communication.edl.h  Diagnostics.edl  IDiagnostics.idl  IDiagnostics.idl.h  LightsGPIO.edl.h
sim/communication/: Communication  Makefile  cmake_install.cmake
sim/control_system/: ControlSystem  Makefile  cmake_install.cmake
sim/diagnostics/: Diagnostics  Makefile  cmake_install.cmake
sim/einit/: .gdbinit  .gdbinit.ide  EinitHw  Makefile  cmake_install.cmake  kos-image  kos-image.dbg.syms  kos-image.dtb  kos-image.map  kos-image.romfs  kos-image.stripped  kos-qemu-image.qemu.txt  ramdisk0.img
sim/einit/EinitHw-kss/: EinitHw.c  init.yaml  init.yaml.internal  ksm.module  ksm.module.depends  manifest.json  security.psl.audit.c
sim/einit/EinitQemu-kss/: init.yaml  init.yaml.internal
sim/lights_gpio/: LightsGPIO  Makefile  cmake_install.cmake
